Cloud-DevOps/cloud/kubernetes/06.ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: sk044-ingress-test
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: ingress.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk044-first-deploy-test
            port:
              number: 8080
        path: /sk044(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 'ingress.skala25a.project.skala-ai.com'
    secretName: skala25-project-tls-cert
